Huge layout reformat

--- a/_posts/2013-05-07-blog-2.md
+++ b/_posts/2013-05-07-blog-2.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title:  "Welcome to my website!"
+title:  "Another cool post"
 subtitle: Why and how did I set up this blog
 author: Jorge M.G.
 date: 30th April, 2020
+categories: c_programming
 resume: 
 
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit
